1.3.1
-----
2022-01-16
- Mod: Update composer 'post-create-project-cmd' command.
- Mod: Update README.md.
- Fix: NBPC_Main class typo.


1.3.0
-----
2022-01-16

- Add: Very simple dependency injector.
- Add: NBPC_Hook_Impl::add_action_once(), NBPC_Hook_Impl::add_filter_once() are added.
- Add: make-zip script.
- Mod: NBPC_Main_Base::init_conditional_modules() is removed. Implement it in NBPC_Main when it is needed.
- Mod: The seconds parameters of NBPC_Hook_Impl::add_action(), and NBPC_Hook_Impl::add_filter() may be omitted.
- Mod: NBPC_Submodule_Impl::assign_modules() returns self.


1.2.7
-----
2022-01-14

- Fix: better type hint when method chaining NBPC_Script_Helper::then() with NBPC_Template_Impl::render().
- Fix: Fix NBPC_Register_Widget::get_items() typo.


1.2.6
-----
2022-01-05

- Add: Rewrite reg, register.
- Fix: Remove autoload.php from source tree.


1.2.5
-----
2021-12-25

- Add: Menu reg, register.
- Fix: Better NBPC_Reg_Script::WP_SCRIPT $src support (#54).


1.2.4
-----
2021-12-23

- Fix: typo.
- Fix: minor code cleanup.


1.2.3
-----
2021-12-01

- Fix: 'creat-project' command can finish without prefix changing.
- Fix: Clean test codes and CHANGELOG file after 'creat-project' command
- Fix: *.mo files are also prefix-changed.
- Add: NBPC_HTML, simple HTML output helper.


1.2.2
-----
2021-11-29

- NBPC_Main::extra_initialize() added.
- New registers/regs added.
  - Capability, Role: manage roles and caps.
  - Custom Table: manage custom table creation, and drop.
  - Sidebar: manage sidebar.
  - Widget: manage widget.


1.2.1
-----
2021-11-27

- Add 'npbc_located_path' filter to NBPC_Template_Impl::locate_file() method.
- Fix NBPC_Hook_Impl::add_filter() was calling add_action() instead of add_filter().
- Fix error that occurred after calling 'composer create-project'.
- Remove NBPC_Script_Helper::ejs(), and NBPC_Script_Helper::render().
- Add NBPC_Script_Helper::then(), and NBPC_Style_Helper::then().


1.2.0
-----
2021-11-23
