@@ -1,3 +1,8 @@
+ongoing
+-------
+- Mod: NBPC_Template_Impl::render_file() protects accessing class' object variables from template code.
+
+
 1.3.1
 -----
 2022-01-16
